Version 1.3 - 2015-01-22
* Add extra_premium endorsement
* Add new_covered_element_option endorsement

Version 1.2 - 2014-07-01
* Changelog file creation