@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<form string="Remove Covered Element">
+    <label name="endorsement_part"/>
+    <field name="endorsement_part"/>
+    <label name="endorsement_definition"/>
+    <field name="endorsement_definition"/>
+    <field name="options" no_command="1" mode="tree" colspan="4"/>
+</form>
