@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<tree string="Options" colors="If(Eval('to_remove', False), 'red', 'black')">
+    <field name="to_remove"/>
+    <field name="option"/>
+    <field name="covered_element"/>
+    <field name="start_date"/>
+    <field name="end_date"/>
+    <field name="covered_element_endorsement" tree_invisible="1"/>
+    <field name="option_endorsement" tree_invisible="1"/>
+    <field name="covered_element_option_endorsement" tree_invisible="1"/>
+    <field name="contract"/>
+</tree>
