@@ -1,3 +1,5 @@
+* Add remove_option endorsement
+
 Version 1.3 - 2015-01-22
 * Add extra_premium endorsement
 * Add new_covered_element_option endorsement
